<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CommuteBuddies</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="logo">Commute Buddies</string>
	<string name="login">Login</string>
	<string name="mobile_hint">Mobile No.</string>
	<string name="password_hint">Password</string>
	<string name="confirm_password_hint">Confirm Password</string>
	<string name="forgot_pass">Forgot Password?</string>
	<string name="sign_up">Sign Up</string>
	<string name="sign_up_text">Sign Up For CommuteBuddies</string>
	<string name="login_url">"http://10.0.2.2:3000/users/login.json"</string>
	<string name="signup_url">"http://10.0.2.2:3000/users/create"</string>
	<string name="name_hint">Name</string>
	<string name="email_hint">Email-Id</string>
	<string name="gender">Gender:</string>
	<string name="gender_male">Male</string>
	<string name="gender_female">Female</string>
	<string name="submit">Submit</string>
	<string name="source">Source</string>
	<string name="source_address">Enter Source Address</string>
	<string name="destination">Destination</string>
	<string name="destination_address">Enter Destination Address</string>
	<string name="favourites">From My Favourites</string>
	<string name="home">Home</string>
	<string name="office">Office</string>
	<string name="others">Others</string>
	<string name="time">Select Time</string>
	<string name="date">Select Date</string>
	
	<string-array name="activities_array">
	    <item>Home</item>
        <item>Profile</item>
        <item>Trip History</item>
        <item>Sync Contacts</item>
        <item >Logout</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
	<string name="create_trip">Create A New Trip</string>
	<string name="create_trip_info">Enter Source, Destination and Travel Preferences</string>
	<string name="create_trip_title">CreateTrip</string>
	<string name="find_matches">Find Co-Travellers</string>
	<string name="find_matches_info">Find People With Similar Routes</string>
	<string name="chat_matches">Chat With Co-Travellers</string>
	<string name="chat_matches_info">Chat With Commute Buddies To Plan Trip</string>
    
    
</resources>
