<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:onClick="signUp_submit" >

<LinearLayout 
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:focusable="true" 
        android:focusableInTouchMode="true"
        >

    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight= "20dp"
        android:hint="@string/name_hint"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName" >
    </EditText>

   <EditText
       android:id="@+id/mobile"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight= "20dp"
        android:hint="@string/mobile_hint"
       android:ems="10"
       android:inputType="phone" >
   </EditText>

   <EditText
       android:id="@+id/email"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight= "20dp"
        android:hint="@string/email_hint"
       android:ems="10"
       android:inputType="textEmailAddress" />
   
   <RadioGroup 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight= "20dp"
    android:layout_gravity="center"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/radio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <RadioButton android:id="@+id/radio_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/gender_male"
        android:checked="true"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/gender_female"
        android:onClick="onRadioButtonClicked"/>
</RadioGroup>

   <EditText
       android:id="@+id/password"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight= "20dp"
        android:hint="@string/password_hint"
       android:ems="10"
       android:inputType="textPassword" >

   </EditText>
   
  <EditText
       android:id="@+id/confirm_password"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight= "20dp"
        android:hint="@string/confirm_password_hint"
       android:ems="10"
       android:inputType="textPassword"
       >

   </EditText>

   <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        >

  <Button
      android:id="@+id/submit_button"
      android:layout_width="0px"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:onClick="signUp_submit"
      android:text="@string/submit" />

   </LinearLayout>
</LinearLayout>
</ScrollView>