<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0px"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/create_trip_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/create_trip" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/create_trip_info" />

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0px"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
    android:orientation="horizontal" >
    <Button
        android:id="@+id/find_matches_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
        android:text="@string/find_matches" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/find_matches_info" />
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0px"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
    android:orientation="horizontal" >
    <Button
        android:id="@+id/chat_matches_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
        android:text="@string/chat_matches" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/chat_matches_info" />

</LinearLayout>